tests/ValidProofs/negnegE.fitch
|¬¬x
|---
|x (¬¬E) 1