tests/InvalidRules/negnegE%2.fitch
|¬¬P(c)
|---
|Q(c) (¬¬E) 1
